--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -397,8 +397,102 @@
                          <div class="col-lg-4">
                              <select style="width:155%" id="eFederativa" class="custom-select form-control">
                                  <option value="" disabled selected>Sin Selección</option>
-                                 <option>AAA</option>
-                                 <option>EEE</option>
+                                 <option>Aguas Calientes</option>
+                                 <option>Baja California</option>
+                                 <option>Baja California Sur</option>
+                                 <option>MEX Campeche</option>
+                                 <option>Chiapas</option>
+                                 <option>Chihuahua</option>
+                                 <option>Coahila</option>
+                                 <option>Colima</option>
+                                 <option>Ciudad de Mexico</option>
+                                 <option>Durango</option>
+                                 <option>Guanajuato</option>
+                                 <option>Guerrero</option>
+                                 <option>Hidalgo</option>
+                                 <option>Jalisco</option>
+                                 <option>Estado de Mexico</option>
+                                 <option>Michoacan</option>
+                                 <option>Morelos</option>
+                                 <option>Nayarit</option>
+                                 <option>Nuevo Leon</option>
+                                 <option>Oaxaca</option>
+                                 <option>Puebla</option>
+                                 <option>Queretaro</option>
+                                 <option>Quintana Roo</option>
+                                 <option>San Luis Potosi</option>
+                                 <option>Sinaloa</option>
+                                 <option>Sonora</option>
+                                 <option>Tabasco</option>
+                                 <option>Tamaulipas</option>
+                                 <option>Tlaxcala</option>
+                                 <option>Veracruz</option>
+                                 <option>Yucatan</option>
+                                 <option>Zacatecas</option>
+                                 <option>USA Alabama</option>
+                                 <option>Alaska</option>
+                                 <option>Arizona</option>
+                                 <option>Arkansas</option>
+                                 <option>California</option>
+                                 <option>Carolina del norte</option>
+                                 <option>Carolina del Sur</option>
+                                 <option>Colorado</option>
+                                 <option>Connecticut</option>
+                                 <option>Dakota del Norte</option>
+                                 <option>Dakota del Sur</option>
+                                 <option>Delaware</option>
+                                 <option>Florida</option>
+                                 <option>Georgia</option>
+                                 <option>Hawai</option>
+                                 <option>Idaho</option>
+                                 <option>Lllinois</option>
+                                 <option>indiana</option>
+                                 <option>lowa</option>
+                                 <option>Kansas</option>
+                                 <option>Kentucky</option>
+                                 <option>Luisiana</option>
+                                 <option>Maine</option>
+                                 <option>Maryland</option>
+                                 <option>Massachusetts</option>
+                                 <option>Michigan</option>
+                                 <option>Minnesota</option>
+                                 <option>Misisipi</option>
+                                 <option>Misuri</option>
+                                 <option>Montana</option>
+                                 <option>Nebraska</option>
+                                 <option>Nevada</option>
+                                 <option>Nueva Jersey</option>
+                                 <option>Nueva York</option>
+                                 <option>Nuevo Hampshire</option>
+                                 <option>Nuevo Mexico</option>
+                                 <option>Ohio</option>
+                                 <option>Oklahoma</option>
+                                 <option>Oregon</option>
+                                 <option>Pensilvania</option>
+                                 <option>Rhode Island</option>
+                                 <option>Tennessee</option>
+                                 <option>Texas</option>
+                                 <option>Utah</option>
+                                 <option>Vermont</option>
+                                 <option>Virginia</option>
+                                 <option>Virginia Occidental</option>
+                                 <option>Whashington</option>
+                                 <option>Wisconsin</option>
+                                 <option>Wyoming</option>
+                                 <option>CAN Ontario</option>
+                                 <option>Quebec</option>
+                                 <option>Nueva Escocia</option>
+                                 <option>Nuevo Brunswick</option>
+                                 <option>Manitoba</option>
+                                 <option>Columbia Britanica</option>
+                                 <option>Isla del Principe Eduardo</option>
+                                 <option>Saskatchewan</option>
+                                 <option>Alberta</option>
+                                 <option>Terranova y Labrador</option>
+                                 <option>Territorio del Noroeste</option>
+                                 <option>Yukon</option>
+                                 <option>Nuvavut</option>
+
                              </select>
                          </div>
                      </div>
@@ -437,18 +531,18 @@
                          <div class="col-lg-4">
                              <select style="width:155%" tRegimen class="custom-select form-control">
                                  <option value="" disabled selected>Sin Selección</option>
-                                 <option>02 Sueldos</option>
-                                 <option>03 Jubilados</option>
-                                 <option>04 Pensionados</option>
-                                 <option>05 Asimilados Miembros Sociedades Cooperativas Produccion</option>
-                                 <option>06 Asimilados Integrantes Sociedades Asocioaciones Civiles</option>
-                                 <option>07 Asimilidados Miembros Consejos</option>
-                                 <option>08 Asimilados Comisionistas</option>
-                                 <option>09 Asimilados Honorarios</option>
-                                 <option>10 Asimilidados Acciones</option>
-                                 <option>11 Asimilados Otros</option>
-                                 <option>12 Jubilados o Pensionados</option>
-                                 <option>99 Otro regimen</option>
+                                 <option value="">02 Sueldos</option>
+                                 <option value="">03 Jubilados</option>
+                                 <option value="">04 Pensionados</option>
+                                 <option value="">05 Asimilados Miembros Sociedades Cooperativas Produccion</option>
+                                 <option value="">06 Asimilados Integrantes Sociedades Asocioaciones Civiles</option>
+                                 <option value="">07 Asimilidados Miembros Consejos</option>
+                                 <option value="">08 Asimilados Comisionistas</option>
+                                 <option value="">09 Asimilados Honorarios</option>
+                                 <option value="">10 Asimilidados Acciones</option>
+                                 <option value="">11 Asimilados Otros</option>
+                                 <option value="">12 Jubilados o Pensionados</option>
+                                 <option value="">99 Otro regimen</option>
 
                              </select>
                          </div>
@@ -484,12 +578,12 @@
                          <div class="col-lg-4">
                              <select style="width:155%" id="rPuesto" class="custom-select form-control">
                                  <option value="" disabled selected>Sin Selección</option>
-                                 <option>1 Clase I</option>
-                                 <option>2 Clase II</option>
-                                 <option>3 Clase III</option>
-                                 <option>4 Clase IV</option>
-                                 <option>5 Clase V</option>
-                                 <option>No aplica</option>
+                                 <option value="">1 Clase I</option>
+                                 <option value="">2 Clase II</option>
+                                 <option value="">3 Clase III</option>
+                                 <option value="">4 Clase IV</option>
+                                 <option value="">5 Clase V</option>
+                                 <option value="">No aplica</option>
                              </select>
                          </div>
                      </div>
@@ -510,15 +604,15 @@
                          <div class="col-lg-4">
                              <select style="width:155%" id="tJornada" class="custom-select form-control">
                                  <option value="" disabled selected>Sin Selección</option>
-                                 <option>01.- Diurna</option>
-                                 <option>02.- Nocturna</option>
-                                 <option>03.- Mixta</option>
-                                 <option>04.- Por hora</option>
-                                 <option>05.- Reducida</option>
-                                 <option>06.- Continuada</option>
-                                 <option>07.- Partida</option>
-                                 <option>08.- Por turnos</option>
-                                 <option>99.- Otra jornada</option>
+                                 <option value="">01.- Diurna</option>
+                                 <option value="">02.- Nocturna</option>
+                                 <option value="">03.- Mixta</option>
+                                 <option value="">04.- Por hora</option>
+                                 <option value="">05.- Reducida</option>
+                                 <option value="">06.- Continuada</option>
+                                 <option value="">07.- Partida</option>
+                                 <option value="">08.- Por turnos</option>
+                                 <option value="">99.- Otra jornada</option>
                              </select>
                          </div>                   
                      </div> 
@@ -552,8 +646,8 @@
                          <div class="col-lg-4">
                              <select style="width:155%" id="sindicalizado" class="custom-select form-control">
                                  <option value="" disabled selected>Sin Seleccionar</option>
-                                 <option>AAA</option>
-                                 <option>EEE</option>
+                                 <option value="">SI</option>
+                                 <option value="">NO</option>
                              </select>
                          </div>                   
                      </div>  
