--- a/src/app/components/product-form/product-form.component.html
+++ b/src/app/components/product-form/product-form.component.html
@@ -104,39 +104,43 @@
 
      <div class="table table-resposive">
        <table id="tabla1" border="1" class="rwd-table">
+       <thead>
            <tr>
-             <th>Clave, servicio o prod</th>
-             <th >No. identificacion</th>
-             <th >Clave unidad</th>
-             <th >Unidad</th>
-             <th >Descripcion</th>
-             <th >Valor unitario</th>
+             <th scope="col">Clave, servicio o prod</th>
+             <th scope="col">No. identificacion</th>
+             <th scope="çol">Clave unidad</th>
+             <th scope="col">Unidad</th>
+             <th scope="col">Descripcion</th>
+             <th scope="col">Valor unitario</th>
              <th scope="col">T, E, E</th>
            </tr>
+           </thead>
 
+           <tbody>
            <tr>
-             <td data-th="Clave, servicio o prod">11101716</td>
-             <td data-th="No. indetificacion">1.00</td>
-             <td data-th="Clave unidad">MTR</td>
-             <td data-th="Unidad">METRO</td>
-             <td data-th="Descripcion">SOLDADURA OMEGA 1.00</td>
-             <td data-th="Valor unitario">$6.00000</td>
-             <td data-th="T, E, E"><i class="far fa-clock" style="font-size: 15px;"></i> <i class="fas fa-pencil-alt" style="font-size: 15px;"></i> <i class="fas fa-trash-alt" style="font-size: 15px;"></i></td>
+             <td data-label="Clave, servicio o prod">11101716</td>
+             <td data-label="No. indetificacion">1.00</td>
+             <td data-label="Clave unidad">MTR</td>
+             <td data-label="Unidad">METRO</td>
+             <td data-label="Descripcion">SOLDADURA OMEGA 1.00</td>
+             <td data-label="Valor unitario">$6.00000</td>
+             <td data-label="T, E, E"><i class="far fa-clock" style="font-size: 15px;"></i> <i class="fas fa-pencil-alt" style="font-size: 15px;"></i> <i class="fas fa-trash-alt" style="font-size: 15px;"></i></td>
              
            </tr>
 
            <tr>
-             <td data-th="Clave, servicio o prod">2260868</td>
-             <td data-th="No. indetificacion">2.00</td>
-             <td data-th="Clave unidad">MTR0</td>
-             <td data-th="Unidad">Envoltura</td>
-             <td data-th="Descripcion">SOLDADURA OMEGA 2.00</td>
-             <td data-th="Valor unitario">$10.00000</td>
-             <td data-th="T, E, E"><i class="far fa-clock" style="font-size: 15px;"></i> <i class="fas fa-pencil-alt" style="font-size: 15px;"></i> <i class="fas fa-trash-alt" style="font-size: 15px;"></i> </td>
+             <td scope="row" data-label="Clave, servicio o prod">2260868</td>
+             <td data-label="No. indetificacion">2.00</td>
+             <td data-label="Clave unidad">MTR0</td>
+             <td data-label="Unidad">Envoltura</td>
+             <td data-label="Descripcion">SOLDADURA OMEGA 2.00</td>
+             <td data-label="Valor unitario">$10.00000</td>
+             <td data-label="T, E, E"><i class="far fa-clock" style="font-size: 15px;"></i> <i class="fas fa-pencil-alt" style="font-size: 15px;"></i> <i class="fas fa-trash-alt" style="font-size: 15px;"></i> </td>
              
            </tr>
          </tbody>
        </table>
+
      </div>
 </div>
 </div>
