--- a/src/app/components/product-form/product-form.component.css
+++ b/src/app/components/product-form/product-form.component.css
@@ -1,67 +1,3 @@
-/*.btn-secondary{
-    margin-left: 3px;
-}
-
-.btn-success{
-    margin-left: 3px;
-}
-
-.btn-circle, .btn-circle-3d{
-    border-radius: 50%;
-    background-color: #D0CACA;
-    margin-left: 4px;
-}
-
-.btn-default.btn-circle{
-    -webkit-box-shadow: 0px 0px 3px 1px #ccc; 
-}
-
-.right {
-    text-align: right;
-}
-
-.r{color: blue;}
-
-.col-lg-5{
-    position: relative;
-    left: 2em;
-}
-
-font{
-    text-align: left;
-} */
-.btn-secondary{
-    margin-left: 3px;
-}
-
-.btn-success{
-    margin-left: 3px;
-}
-
-.btn-circle, .btn-circle-3d{
-    border-radius: 50%;
-    background-color: #D0CACA;
-    margin-left: 4px;
-}
-
-.btn-default.btn-circle{
-    -webkit-box-shadow: 0px 0px 3px 1px #ccc; 
-}
-
-.right {
-    text-align: right;
-}
-
-.r{color: blue;}
-
-.col-lg-5{
-    position: relative;
-    left: 2em;
-}
-
-font{
-    text-align: left;
-}
 
 #a{     
 padding: 0;
@@ -92,171 +28,117 @@ height: 65px;
 
 /* New Product*/
 h5{
-margin-left: -1.1em;
-padding: 2%;
-background-color: #2471A3;
-width: 103.5%;
-font-size: 15x;
+  text-align: center;
+  font-size: 30px;
+background-color: #336666;
 color:#ffffff;
+position: fixed;
+top: 0%;
+left: 0%;
+height: 40px;
+width: 799px;
+margin: 0px;
+padding: 0em;
+border: 0px;
 }
 
 /* Table */
 .rwd-table {
-  margin: 1em 0;
-  min-width: 288px;
-}
-.rwd-table th {
-  display: none;
-  width: 10%;
-}
-.rwd-table td {
-  display: block;
-}
-.rwd-table td:before {
-  content: attr(data-th) ": ";
-  font-weight: bold;
-  width: 6.5em;
-  display: inline-block;
-}
-@media (min-width: 480px) {
-  .rwd-table td:before {
-    display: none;
-  }
-}
-.rwd-table th, .rwd-table td {
-  text-align: center;
-}
-@media (min-width: 480px) {
-  .rwd-table th, .rwd-table td {
-    display: table-cell;
-  }
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
 }
 
-body {
-  font-family: Montserrat, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  color: #444;
-  background: #eee;
-}
-
-.rwd-table {
-  background:    #ffffff;
-  color:  #000000;
-  overflow: hidden;
+.rwd-table caption {
+  font-size: 1.5em;
+  margin: .5em 0 .75em;
 }
 
 .rwd-table tr {
-  border-color:  #000000;
-border: 2px solid #3498DB;
+  border: 1px solid #ddd;
+  padding: .35em;
 }
 
-.rwd-table th, .rwd-table td:before {
-  color:   #000000; 
-  font-family: calibri;
- 
+.rwd-table th,
+.rwd-table td {
+  padding: .625em;
+  text-align: center;
+  font-size: 11px;
 }
 
-.rwd-table th{
-background-color: #E5E8E8;
+.rwd-table th {
+  font-size: .85em;
+  letter-spacing: .1em;
+  text-transform: uppercase;
 }
+
+.rwd-table th {
+  background-color: #2980B9;
+   }
 
 .rwd-table tr:nth-child(odd) {
-    background-color: #D6EAF8;
+  background-color: #85C1E9;
 }
 
 .rwd-table tr:nth-child(even) {
-    background-color: #EDF4F9;
+  background-color: #AED6F1;
+}
+
+.rwd-table th{
+  font-size: 11px;
+} 
+@media screen and (max-width: 600px) {
+.rwd-table {
+    border: 0;
+  }
+
+  .rwd-table caption {
+    font-size: 1.3em;
+  }
+  
+  .rwd-table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+  
+  .rwd-table tr {
+    border-bottom: 3px solid #ddd;
+    display: block;
+    margin-bottom: .625em;
+  }
+  
+  .rwd-table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: .8em;
+    text-align: right;
+  }
+  
+  .rwd-table td::before {
+    /*
+    * aria-label has no advantage, it won't be read inside a table
+    content: attr(aria-label);
+    */
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  .rwd-table td:last-child {
+    border-bottom: 0;
+  }
 }   
 
-
-/* Table 2 */
-.table {
-  margin: 1em 0;
-  min-width: 290px;
-}
-.table th {
-  display: none;
-  width: 10%;
-}
-.table td {
-  display: block;
-}
-.table td:before {
-  content: attr(data-th) ": ";
-  font-weight: bold;
-  width: 6.5em;
-  display: inline-block;
-}
-@media (min-width: 480px) {
-  .table td:before {
-    display: none;
-  }
-}
-.table th, .table td {
-  text-align: center;
-}
-@media (min-width: 480px) {
-  .table th, .table td {
-    display: table-cell;
-  }
-}
-
-body {
-  font-family: Montserrat, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  color: #444;
-  background: #eee;
-}
-
-.table {
-  background:    #ffffff;
-  color:  #000000;
-  overflow: hidden;
-}
-
-.table tr {
-  border-color:  #000000;
-border: 2px solid #3498DB;
-}
-
-.table th, .table td:before {
-  color:   #000000; 
-  font-family: calibri;
- 
-}
-
-.table th{
-background-color: #E5E8E8;
-}
-
-.table tr:nth-child(odd) {
-    background-color: #D6EAF8;
-}
-
-.table tr:nth-child(even) {
-    background-color: #EDF4F9;
-}   
-
-#c{
-margin: 0%;    
-font-size: 100%;
-text-align: right;
-}
-
-#btn1{
-float: right;
-
-}
-
-#btn2{
-float: right;;
-}
-
-#btn3{ 
-float: right;
- }
 
  #panels{
   background-color: #336666;
