--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -13,8 +13,8 @@
             </div>
             <div id="collapse1" class="panel-collapse collapse">
               <ul class="list-group">
-                <li class="list-group-item">CFDI 3.3</li>
-                <li class="list-group-item">Retenciones</li>
+                <li class="list-group-item"><a routerLink="../Rcfdi33">CFDI 3.3</a></li>
+                <li class="list-group-item"><a routerLink="../retenciones">Retenciones</a></li>
               </ul>
             </div>
           </div>
@@ -35,9 +35,9 @@
                 <ul class="list-group">
                   <li class="list-group-item"><a routerLink="">Generar CFDI 3.3</a></li>
                   <li class="list-group-item"><a routerLink="../nomina">Generar nómina 1.2</a></li>
-                  <li class="list-group-item">Generar complemento pagos</li>
-                  <li class="list-group-item">Generar retenciones</li>
-                  <li class="list-group-item">Generar comercio exterior 1.1</li>
+                  <li class="list-group-item"><a routerLink="../pagos">Generar complemento pagos</a></li>
+                  <li class="list-group-item"><a routerLink="../retenciones">Generar retenciones</a></li>
+                  <li class="list-group-item"><a routerLink="../comercio">Generar comercio exterior 1.1</a></li>
                 </ul>
               </div>
             </div>
