--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -14,7 +14,7 @@
             <div id="collapse1" class="panel-collapse collapse">
               <ul class="list-group">
                 <li class="list-group-item"><a routerLink="../Rcfdi33">CFDI 3.3</a></li>
-                <li class="list-group-item"><a routerLink="../retenciones">Retenciones</a></li>
+                <li class="list-group-item"><a routerLink="../Rretenciones">Retenciones</a></li>
               </ul>
             </div>
           </div>
