--- a/src/app/components/product-form/product-form.component.html
+++ b/src/app/components/product-form/product-form.component.html
@@ -7,6 +7,7 @@
       Descripcion: <input type="text" name="descripcion" placeholder="Descripcion">
 
       <button class="btn right" style="margin-left: 4px;">Limpiar</button>
+      &nbsp;
       <button type="button" class="btn btn-success">Buscar Producto</button>
     </div>
   </div>
@@ -124,7 +125,7 @@
              <td data-label="Unidad">METRO</td>
              <td data-label="Descripcion">SOLDADURA OMEGA 1.00</td>
              <td data-label="Valor unitario">$6.00000</td>
-             <td data-label="T, E, E"><i class="far fa-clock" style="font-size: 15px;"></i> <i class="fas fa-pencil-alt" style="font-size: 15px;"></i> <i class="fas fa-trash-alt" style="font-size: 15px;"></i></td>
+             <td data-label="T, E, E"><i class="far fa-clock" style="font-size: 15px;"></i> &nbsp; <i class="fas fa-pencil-alt" style="font-size: 15px;"></i> &nbsp; <i class="fas fa-trash-alt" style="font-size: 15px;"></i></td>
              
            </tr>
 
@@ -135,7 +136,7 @@
              <td data-label="Unidad">Envoltura</td>
              <td data-label="Descripcion">SOLDADURA OMEGA 2.00</td>
              <td data-label="Valor unitario">$10.00000</td>
-             <td data-label="T, E, E"><i class="far fa-clock" style="font-size: 15px;"></i> <i class="fas fa-pencil-alt" style="font-size: 15px;"></i> <i class="fas fa-trash-alt" style="font-size: 15px;"></i> </td>
+             <td data-label="T, E, E"><i class="far fa-clock" style="font-size: 15px;"></i> &nbsp; <i class="fas fa-pencil-alt" style="font-size: 15px;"></i> &nbsp; <i class="fas fa-trash-alt" style="font-size: 15px;"></i> </td>
              
            </tr>
          </tbody>
