--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,13 @@
+<div class="container-fluid">
 <nav class="navbar navbar-icon-top navbar-expand-lg" style="background-color: #336666">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #85929E">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-
-
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a routerLink="empleado" id="icon" class="nav-link" href="#" >
+              <a routerLink="principal" id="icon" class="nav-link" href="#" >
               <span id="pru" class="glyphicon glyphicon-home"></span>
               <br>
               Panel principal
@@ -58,5 +57,7 @@
           </ul>
         </div>
       </nav>
+
+      </div>
 
 <router-outlet></router-outlet>
