--- a/src/app/components/empleado/empleado.component.html
+++ b/src/app/components/empleado/empleado.component.html
@@ -1,9 +1,4 @@
 <div class="container-fluid">
-    
-    <style>
-        .b {border: thin blue solid;}
-    </style>
-    
     <div class="panel panel-primary">
         <div class="panel-heading" id="panels">Emisor</div>
         <div class="panel-body"> 
@@ -17,7 +12,7 @@
                  type="checkbox" value=""><label>Agregar emisor</label>
            </div>
         <div class="d-flex justify-content-center">
-            <div class="b"><p>
+            <div class="c"><p>
 
              <form class="form-inline" role="form">
                <div class="form-group col-lg-4">
@@ -58,7 +53,7 @@
 
 <div class="panel panel-primary">
   <div class="panel-heading" id="panels">Empleado</div>
-     <div id="c" class="panel-body d-flex justify-content-center">
+     <div class="panel-body d-flex justify-content-center">
         <div class="c"> <p></p>
             <form class="form-inline col-lg-12 " role="form-horizontal">
                 <div class="col-md-12 col-lg-12">
@@ -184,8 +179,7 @@
                              <font size="2" class="r">*Tipo de nómina:</font>   
                          </div>
                          <div class="col-lg-5">
-                             <select name="tNomina" #name="ngModel" [(ngModel)]="empleadoService.selectedEmpleado.tNomina"
-                              style="width:155%" class="custom-select form-control">
+                             <select class="custon-select form-control" name="tnomina"#name="ngModel" [(ngModel)]="empleadoService.selectedEmpleado.tNomina">
                                  <option value="" disabled selected>Sin Selección</option>
                                  <option value="ordinaria">O-Nomina ordinaria</option>
                                  <option value="extraordinaria">E-Nomina extraordinaria</option>
@@ -204,7 +198,7 @@
                          </div>
                          <div class="col-lg-4">
                              <select name="perioPago" #name="ngModel" [(ngModel)]="empleadoService.selectedEmpleado.perioPago"
-                              style="width:155%" class="custom-select form-control">
+                              style="width:155%" class="custon-select form-control">
                                  <option id="option" value="" disabled selected>Sin Selección</option>
                                  <option value="diario">01 Diario</option> 
                                  <option value="semanal">02 Semanal</option>
@@ -227,7 +221,7 @@
                              <font size="2" class="r">*Entidad federativa:</font>   
                          </div>
                          <div class="col-lg-4">
-                             <select name="entFederativa" #name="ngModel" [(ngModel)]="empleadoService.selectedEmpleado.entFederativa" style="width:155%" class="custom-select form-control">
+                             <select name="entFederativa" #name="ngModel" [(ngModel)]="empleadoService.selectedEmpleado.entFederativa" style="width:155%" class="custon-select form-control">
                                  <option value="" disabled selected>Sin Selección</option>
                                  <option value="aguasCalientes">Aguas Calientes</option>
                                  <option value="bajaCalifornia">Baja California</option>
@@ -334,7 +328,7 @@
                              <font size="2" class="r">*Tipo de contrato:</font>   
                          </div>
                          <div class="col-lg-4">
-                             <select name="tContrato" style="width:155%" class="custom-select form-control">
+                             <select class="custon-select form-control" name="regimen">
                                  <option value="" disabled selected>Sin Selección</option>
                                  <option id="indeterminado">01 Contrato de trabajo por tiempo indeterminado</option>
                                  <option id="determinada">02 Contrato de trabajo por obra determinada</option>
@@ -360,8 +354,8 @@
                          <div class="col-lg-5">
                              <font size="2" class="r">*Tipo de régimen:</font>
                          </div>
-                         <div class="col-lg-4">
-                             <select name="tRegimen" style="width:155%" tRegimen class="custom-select form-control">
+                         <div class="col-sm-7">
+                             <select class="custon-select form-control" name="regimen">
                                  <option value="" disabled selected>Sin Selección</option>
                                  <option value="">02 Sueldos</option>
                                  <option value="">03 Jubilados</option>
@@ -408,7 +402,7 @@
                              <font size="1">Riesgo del puesto:</font>
                          </div>
                          <div class="col-lg-4">
-                             <select name="rPuesto" style="width:155%" class="custom-select form-control">
+                             <select name="rPuesto" style="width:155%" class="custon-select form-control">
                                  <option value="" disabled selected>Sin Selección</option>
                                  <option value="">1 Clase I</option>
                                  <option value="">2 Clase II</option>
@@ -434,7 +428,7 @@
                              <font size="1">Tipo de jornada:</font>   
                          </div>
                          <div class="col-lg-4">
-                             <select name="tJornada" style="width:155%" class="custom-select form-control">
+                             <select name="tJornada" style="width:155%" class="custon-select form-control">
                                  <option value="" disabled selected>Sin Selección</option>
                                  <option value="">01.- Diurna</option>
                                  <option value="">02.- Nocturna</option>
@@ -476,7 +470,7 @@
                              <font size="1">Sindicalizado:</font>   
                          </div>
                          <div class="col-lg-4">
-                             <select name="sindicalizado" style="width:155%" class="custom-select form-control">
+                             <select name="sindicalizado" style="width:155%" class="custon-select form-control">
                                  <option value="" disabled selected>Sin Seleccionar</option>
                                  <option value="">SI</option>
                                  <option value="">NO</option>
@@ -504,7 +498,7 @@
                              <font size="1">Banco:</font>   
                          </div>
                          <div class="col-lg-4">
-                             <select name="banco" style="width:155%" class="custom-select form-control">
+                             <select name="banco" style="width:155%" class="custon-select form-control">
                                  <option value="" disabled selected>Sin Selección</option>
                                  <option>002 BANAMEX</option>
                                  <option>006 BANCOMEXT</option>
@@ -747,7 +741,9 @@
                      <div id="panel" class="panel-body">
                  
                        <button id="btn1" type="button" class="btn btn-secondary" style="margin-left: 4px;">Regresar</button>
+                       &nbsp;
                        <button id="btn2" type="button" class="btn btn-secondary">Limpiar</button>
+                       &nbsp;
                        <button id="btn3" type="button" class="btn btn-success">Agregar</button>
                      </div>
                </div>
@@ -807,7 +803,7 @@
                                                     <td data-th="RFC">CANA860507RI8</td>
                                                     <td data-th="Nombre">NA GISELA CASTILLO NAVA</td>
                                                     <td data-th="No. De empleado">5</td>
-                                                    <td data-th="Edit/Delete"><i class="fas fa-pencil-alt" style="font-size: 15px;"></i> <i class="fas fa-trash-alt" style="font-size: 15px;"></i></td>
+                                                    <td data-th="Edit/Delete"><i class="fas fa-pencil-alt" style="font-size: 15px;"></i> &nbsp; <i class="fas fa-trash-alt" style="font-size: 15px;"></i></td>
                                                 </tr>
                     
                                                 <tr>
@@ -815,7 +811,7 @@
                                                     <td data-th="RFC">CANA860507RI8</td>
                                                     <td data-th="Nombre">NA GISELA CASTILLO NAVA</td>
                                                     <td data-th="No. De empleado">5</td>
-                                                    <td data-th="Edit/Delete"><i class="fas fa-pencil-alt" style="font-size: 15px;"></i> <i class="fas fa-trash-alt" style="font-size: 15px;"></i></td>
+                                                    <td data-th="Edit/Delete"><i class="fas fa-pencil-alt" style="font-size: 15px;"></i> &nbsp; <i class="fas fa-trash-alt" style="font-size: 15px;"></i></td>
                                                     
                                                 </tr>
                                         </table>
@@ -830,12 +826,13 @@
                             </div>
                             <div class="col-sm-4 right">
                               <div class="form-group">
-                                    <button class="btn btn-default btn-circle"><i class="glyphicon glyphicon-backward"></i></button>
-                                    <button class="btn btn-default btn-circle"><i class="glyphicon glyphicon-triangle-left"></i></button>
-                                    <button class="btn btn-default btn-circle"><i class="glyphicon glyphicon-triangle-right"></i></button>
-                                    <button class="btn btn-default btn-circle"><i class="glyphicon glyphicon-forward"></i></button> <p></p>
-
-                                    <button type="button" class="btn btn-success">Exportar empleados</button> <p>
+                                    <button class="btn btn-default btn-circle" id="btn1"><i class="glyphicon glyphicon-backward"></i></button>
+                                    <button class="btn btn-default btn-circle" id="btn2"><i class="glyphicon glyphicon-triangle-left"></i></button>
+                                    <button class="btn btn-default btn-circle" id="btn3"><i class="glyphicon glyphicon-triangle-right"></i></button>
+                                    <button class="btn btn-default btn-circle" id="btn4"><i class="glyphicon glyphicon-forward"></i></button> <p></p>
+                                    <br>
+                                    <br>     
+                                    <button type="button" class="btn btn-success" id="btn5">Exportar empleados</button> <p>
                               </div>
                             </div>
                         </div>
